--- a/index.html
+++ b/index.html
@@ -1,11 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <style type="text/tailwindcss">
+        body {
+            font-family: 'Inter', sans-serif;
+        }
+        body {
+            @apply bg-[#EAEDF7] p-1;
+        }
+      </style>
     <title>Top Tier Travel</title>
 </head>
+
 <body>
-    <h1>Top Tier Travel</h1>
+    <!-- Main Boday -->
+    <div class="flex">
+        <!-- Menu -->
+        <div class="max-w-[272px] h-[98vh] bg-[#FFFFFF] rounded-tl-[10px] rounded-bl-[10px]">
+            <!-- below flex col is not working -->
+            <div class="flex flex-col items-center justify-between h-full">
+                <div>
+                    <!-- Logo -->
+                    <div>
+                        <div class="p-3">
+                            <img src="https://static.vecteezy.com/system/resources/previews/006/232/185/non_2x/letter-t-with-airplane-logo-design-suitable-for-tour-and-travel-start-up-logistic-business-logo-template-vector.jpg"
+                                alt="logo" width="40px" height="40px">
+                        </div>
+                        <div class="w-10 h-px bg-[#E2E4E9] mx-auto mb-2"></div>
+                    </div>
+
+                    <!-- Menu Items -->
+                    <div class="px-[8px] py-[20px] flex flex-col gap-5">
+                        <!-- Main -->
+                        <div class="flex flex-col items-center justify-center gap-2">
+                            <h2 class="uppercase font-medium text-xs text-[#868C98] tracking-wider p-1">Main</h2>
+                            <a class="hover:cursor-pointer p-2 bg-[#6E3FF31A] rounded-lg relative">
+                                <div
+                                    class="absolute w-1 h-5 rounded-tr-[4px] rounded-br-[4px] bg-[#6E3FF3] my-auto left-[-17px] top-0 bottom-0">
+                                </div>
+                                <img src="https://img.icons8.com/?size=100&id=23822&format=png&color=000000" alt="menu"
+                                    width="15px" height="15px" class="text-gray-300">
+                            </a>
+                            <a class="hover:cursor-pointer p-2 hover:bg-[#6E3FF31A] hover:rounded-lg">
+                                <img src="https://img.icons8.com/?size=100&id=23822&format=png&color=000000" alt="menu"
+                                    width="15px" height="15px" class="text-gray-300">
+                            </a>
+                            <a class="hover:cursor-pointer p-2 hover:bg-[#6E3FF31A] hover:rounded-lg">
+                                <img src="https://img.icons8.com/?size=100&id=23822&format=png&color=000000" alt="menu"
+                                    width="15px" height="15px" class="text-gray-300">
+                            </a>
+                            <a class="hover:cursor-pointer p-2 hover:bg-[#6E3FF31A] hover:rounded-lg">
+                                <img src="https://img.icons8.com/?size=100&id=23822&format=png&color=000000" alt="menu"
+                                    width="15px" height="15px" class="text-gray-300">
+                            </a>
+                            <a class="hover:cursor-pointer p-2 hover:bg-[#6E3FF31A] hover:rounded-lg">
+                                <img src="https://img.icons8.com/?size=100&id=23822&format=png&color=000000" alt="menu"
+                                    width="15px" height="15px" class="text-gray-300">
+                            </a>
+                            <a class="hover:cursor-pointer p-2 hover:bg-[#6E3FF31A] hover:rounded-lg">
+                                <img src="https://img.icons8.com/?size=100&id=23822&format=png&color=000000" alt="menu"
+                                    width="15px" height="15px" class="text-gray-300">
+                            </a>
+                            <a class="hover:cursor-pointer p-2 hover:bg-[#6E3FF31A] hover:rounded-lg">
+                                <img src="https://img.icons8.com/?size=100&id=23822&format=png&color=000000" alt="menu"
+                                    width="15px" height="15px" class="text-gray-300">
+                            </a>
+                            <a class="hover:cursor-pointer p-2 hover:bg-[#6E3FF31A] hover:rounded-lg">
+                                <img src="https://img.icons8.com/?size=100&id=23822&format=png&color=000000" alt="menu"
+                                    width="15px" height="15px" class="text-gray-300">
+                            </a>
+                        </div>
+                        <!-- Other -->
+                        <div class="flex flex-col items-center justify-center gap-2">
+                            <h2 class="uppercase font-medium text-xs text-[#868C98] tracking-wider p-1">Other</h2>
+                            <a class="hover:cursor-pointer p-2 hover:bg-[#6E3FF31A] hover:rounded-lg">
+                                <img src="https://img.icons8.com/?size=100&id=23822&format=png&color=000000" alt="menu"
+                                    width="15px" height="15px" class="text-gray-300">
+                            </a>
+                            <a class="hover:cursor-pointer p-2 hover:bg-[#6E3FF31A] hover:rounded-lg">
+                                <img src="https://img.icons8.com/?size=100&id=23822&format=png&color=000000" alt="menu"
+                                    width="15px" height="15px" class="text-gray-300">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- User Profile -->
+                <div>
+                    <div class="w-10 h-px bg-[#E2E4E9] mx-auto mb-2"></div>
+                    <div class="p-3">
+                        <img src="https://static.vecteezy.com/system/resources/previews/020/168/486/non_2x/cheerful-neat-man-flat-avatar-icon-with-green-dot-editable-default-persona-for-ux-ui-design-profile-character-picture-with-online-status-indicator-color-messaging-app-user-badge-vector.jpg"
+                            alt="logo" width="40px" height="40px">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Main Content -->
+        <div>
+
+        </div>
+    </div>
 </body>
+
 </html>
