--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <style type="text/tailwindcss">
         html,
         body {
-            @apply h-full w-full m-0 p-0 overflow-hidden bg-[#EAEDF7];
+            @apply h-full w-full m-1 p-0 overflow-hidden bg-[#EAEDF7];
             font-family: 'Inter', sans-serif;
         }
       </style>
@@ -97,8 +97,8 @@
                 <div>
                     <div class="w-10 h-px bg-[#E2E4E9] mx-auto mb-2"></div>
                     <div class="p-3">
-                        <img src="https://static.vecteezy.com/system/resources/previews/020/168/486/non_2x/cheerful-neat-man-flat-avatar-icon-with-green-dot-editable-default-persona-for-ux-ui-design-profile-character-picture-with-online-status-indicator-color-messaging-app-user-badge-vector.jpg"
-                            alt="logo" width="40px" height="40px">
+                        <img src="https://images.unsplash.com/photo-1633332755192-727a05c4013d?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8dXNlcnxlbnwwfHwwfHx8MA%3D%3D"
+                            alt="logo" width="40px" height="40px" class="rounded-lg">
                     </div>
                 </div>
             </div>
@@ -106,8 +106,39 @@
         <!-- Main Content -->
         <!-- For Debug -->
         <!-- bg-white w-full h-[90vh] rounded-lg -->
-        <div class="flex flex-col w-full border border-red-300 rounded-lg my-8 mx-5">
-
+        <div class="flex flex-col w-full border border-red-300 rounded-lg my-7 mx-5">
+            <div
+                class="bg-[#FFFFFF] rounded-lg px-5 py-3 w-full border border-[#E2E4E9] min-h-16 flex items-center justify-between">
+                <div>
+                    <div
+                        class="border border-[#E2E4E9] bg-[#F6F8FA] py-2 px-[14px] flex items-center justify-start rounded-lg min-w-[290px]">
+                        <img src="https://cdn-icons-png.flaticon.com/512/5680/5680244.png" alt="search" width="15px"
+                            height="15px" class="mr-2">
+                        <input type="search" placeholder="Search..."
+                            class="w-full bg-transparent outline-none focus:outline-none focus:ring-0 focus:border-none text-[#868C98] placeholder:text-[#868C98] font-normal text-sm placeholder:text-sm placeholder:font-normal">
+                    </div>
+                </div>
+                <div class="flex items-center justify-center gap-3">
+                    <div class="border border-[#E2E4E9] p-[10px] rounded-lg bg-[#F6F8FA] cursor-pointer">
+                        <img src="https://www.iconpacks.net/icons/1/free-bell-icon-860-thumb.png" alt="search"
+                            width="15px" height="15px">
+                    </div>
+                    <div class="flex items-center justify-center gap-2 cursor-pointer">
+                        <div class="">
+                            <img src="https://images.unsplash.com/photo-1633332755192-727a05c4013d?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8dXNlcnxlbnwwfHwwfHx8MA%3D%3D"
+                                alt="search" width="37px" height="37px" class="rounded-lg">
+                        </div>
+                        <div class="flex flex-col items-start justify-start p-1">
+                            <h1 class="font-medium text-base text-[#313131]">Jhon Doe</h1>
+                            <h2 class="font-medium text-[10px] text-[#868C98]">Admin</h2>
+                        </div>
+                        <div class="border border-[#E2E4E9] p-[10px] rounded-lg bg-[#F6F8FA] cursor-pointer">
+                            <img src="https://cdn-icons-png.flaticon.com/512/142/142051.png" alt="search" width="10px"
+                                height="10px">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
