--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
          <!-- Main Content -->
          <!-- For Debug -->
          <!-- bg-white w-full h-[90vh] rounded-lg -->
-         <div class="flex flex-col w-full border border-red-300 rounded-lg my-7 mx-5">
+         <div class="flex flex-col w-full rounded-lg my-7 mx-5">
             <div
                class="bg-[#FFFFFF] rounded-lg px-5 py-3 w-full border border-[#E2E4E9] min-h-16 flex items-center justify-between">
                <div>
@@ -139,7 +139,7 @@
                <h1 class="font-semibold text-2xl">Welcome To Dashboard</h1>
             </div>
             <div class="flex items-center justify-between gap-3">
-               <div class="flex flex-col items-center justify-center gap-2">
+               <div class="flex flex-col items-center justify-between min-h-[380px]">
                   <div class="flex flex-col items-center justify-center gap-3">
                      <div class="border border-[#E5E7EB] bg-[#FFFFFF] py-4 px-5 rounded-xl flex items-center justify-center">
                         <div class="space-y-2 min-w-[300px]">
@@ -175,7 +175,7 @@
                         <div class="space-y-2 min-w-[300px]">
                            <h3 class="font-medium text-sm text-[#0A0D14]">Total Sales Revenue</h3>
                            <h4 class="font-bold text-xl text-[#0A0D14]">$49,420</h4>
-                           <h5 class="font-medium text-sm text-[#2D9F75] flex items-center gap-1"><span><img src="https://static.vecteezy.com/system/resources/thumbnails/041/644/009/small_2x/3d-green-upward-trend-arrow-icon-png.png" width="10px" height="10px"></span>40%</h5>
+                           <h5 class="font-medium text-sm text-[#DF1C41] flex items-center gap-1"><span><img src="https://cdn1.iconfinder.com/data/icons/stock-market-and-business/512/3D-Red-Downward-Trend-Arrow-Icon.png" width="10px" height="10px"></span>40%</h5>
                         </div>
                         <div>
                            <div class="p-3 bg-[#675CE60F] rounded-full mt-10">
@@ -186,8 +186,53 @@
                      </div>
                   </div>
                </div>
-               <div>
-                  <h1>Chart Section here</h1>
+               <div class="border border-[#E5E7EB] bg-[#FFFFFF] py-4 px-5 rounded-xl w-full min-h-[380px] flex flex-col items-start justify-start">
+                  <div class="border-b-2 border-b-[#F2F2F2] w-full pb-3">
+                     <h1 class="font-semibold text-[#0A0D14] text-xl">Commision Tracking</h1>
+                  </div>
+                  <div class="flex items-center justify-between w-full py-3 mb-5">
+                     <div class="flex gap-5">
+                        <div class="flex gap-1">
+                           <p class="font-semibold text-xl text-[#0A0D14] mr-2">0%</p>
+                           <p class="font-medium text text-[#868C98]">This Week</p>
+                        </div>
+                       <div class="flex gap-1">
+                           <p class="font-semibold text-xl text-[#0A0D14] mr-2">0%</p>
+                           <p class="font-medium text text-[#868C98]">Projects</p>
+                        </div>
+                     </div>
+                     <div>
+                        <button class="bg-[#6259CA] px-4 py-2 text-[#FFFFFF] rounded-lg cursor-pointer font-semibold text-base">View Details</button>
+                     </div>
+                  </div>
+                  <div class="flex items-center justify-between w-full py-3 mb-5">
+                     <div class="flex items-center justify-evenly gap-10">
+                        <div>
+                           <div class="w-40 h-40 rounded-full bg-[#59B6FC]"></div>
+                        </div>
+                     <div class="flex flex-col items-center justify-center gap-2">
+                     <div class="flex items-center gap-3 w-full mb-3">
+                        <div class="w-3 h-3 rounded-full bg-[#59B6FC]"></div>
+                        <div class="flex justify-between w-[200px]">
+                           <p class="font-normal text-sm text-[#101010B2]">Paid</p>
+                           <p class="font-semibold text-lg text-[#101010]">70%</p>
+                        </div>
+                     </div>
+                     
+                     <div class="flex items-center gap-3 w-full">
+                        <div class="w-3 h-3 rounded-full bg-[#FECB67]"></div>
+                        <div class="flex justify-between w-[200px]">
+                           <p class="font-normal text-sm text-[#101010B2]">Pending</p>
+                           <p class="font-semibold text-lg text-[#101010]">30%</p>
+                        </div>
+                     </div>
+                     </div>
+                     </div>
+                       <div class="flex flex-col py-5 px-10 gap-1">
+                           <p class="font-medium text-[22px] text-[#868C98]">Total Earned</p>
+                           <p class="font-semibold text-5xl text-[#0A0D14] py-2">$100.00</p>
+                        </div>
+                  </div>
                </div>
             </div>
          </div>
