Add share cards

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <div class="py-6">
                <h1 class="font-semibold text-2xl">Welcome To Dashboard</h1>
             </div>
-            <div class="flex items-center justify-between gap-3">
+            <div class="flex items-center justify-between gap-3 mb-5">
                <div class="flex flex-col items-center justify-between min-h-[380px]">
                   <div class="flex flex-col items-center justify-center gap-3">
                      <div class="border border-[#E5E7EB] bg-[#FFFFFF] py-4 px-5 rounded-xl flex items-center justify-center">
@@ -234,6 +234,40 @@
                         </div>
                   </div>
                </div>
+            </div>
+            <div class="w-full flex items-center justify-between gap-5">
+            <div class="w-full h-full flex items-center justify-start gap-5 border border-[#E5E7EB] bg-[#FFFFFF] px-[22px] py-[18px] rounded-xl">
+               <div>
+                  <img src="https://cdn-icons-png.flaticon.com/512/4187/4187272.png" width="150px" height="150px">
+               </div>
+               <div class="w-full">
+                  <div class="border-b-2 border-b-[#E2E4E9] w-full pb-3">
+                     <h1 class="font-semibold text-[#0A0D14] text-xl">Share Travel Link & Earn Reward</h1>
+                     <h2 class="font-normal text-[#525866] text-base">Invite clients & partners to your network</h2>
+                  </div>
+                  <div class="flex items-center justify-start gap-5 mb-2 mt-4 w-full">
+                        <button class="bg-[#6259CA] w-full px-3 py-2 text-[#FFFFFF] rounded-lg cursor-pointer font-semibold text-base">Share Link</button>
+                        <button class="bg-[#F5F4FA] w-full px-3 py-2 text-[#0A0D14] rounded-lg cursor-pointer font-semibold text-base">Copy Link</button>
+                     </div>                  
+               </div>
+
+            </div>
+            <div class="w-full h-full flex items-center justify-start gap-5 border border-[#E5E7EB] bg-[#FFFFFF] px-[22px] py-[18px] rounded-xl">
+               <div>
+                  <img src="https://cdn-icons-png.flaticon.com/512/4187/4187272.png" width="150px" height="150px">
+               </div>
+               <div class="w-full">
+                  <div class="border-b-2 border-b-[#E2E4E9] w-full pb-3">
+                     <h1 class="font-semibold text-[#0A0D14] text-xl">Share Travel Link & Earn Reward</h1>
+                     <h2 class="font-normal text-[#525866] text-base">Invite clients & partners to your network</h2>
+                  </div>
+                  <div class="flex items-center justify-start gap-5 mb-2 mt-4 w-full">
+                        <button class="bg-[#6259CA] w-full px-3 py-2 text-[#FFFFFF] rounded-lg cursor-pointer font-semibold text-base">Share Link</button>
+                        <button class="bg-[#F5F4FA] w-full px-3 py-2 text-[#0A0D14] rounded-lg cursor-pointer font-semibold text-base">Copy Link</button>
+                     </div>                  
+               </div>
+
+            </div>
             </div>
          </div>
       </div>
