Add comments for better readbility

--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
       <!-- For Debug -->
       <!-- bg-white w-full h-[90vh] rounded-lg -->
       <div class="flex flex-col w-full rounded-lg my-7 mx-5">
+        <!-- Header -->
         <div
           class="bg-[#FFFFFF] rounded-lg px-5 py-3 w-full border border-[#E2E4E9] min-h-16 flex items-center justify-between"
         >
@@ -254,10 +255,12 @@
             </div>
           </div>
         </div>
+        <!-- Page Title -->
         <div class="py-6">
           <h1 class="font-semibold text-2xl">Welcome To Dashboard</h1>
         </div>
         <div class="flex items-center justify-between gap-3 mb-5">
+          <!-- Stats -->
           <div class="flex flex-col items-center justify-between min-h-[380px]">
             <div class="flex flex-col items-center justify-center gap-3">
               <div
@@ -359,6 +362,7 @@
               </div>
             </div>
           </div>
+          <!-- Comission Tracking -->
           <div
             class="border border-[#E5E7EB] bg-[#FFFFFF] py-4 px-5 rounded-xl w-full min-h-[380px] flex flex-col items-start justify-start"
           >
@@ -421,6 +425,7 @@
             </div>
           </div>
         </div>
+        <!-- Recent Bookings -->
         <div class="w-full mb-5">
           <div
             class="w-full h-full flex flex-col items-start justify-start gap-5 border border-[#E5E7EB] bg-[#FFFFFF] px-5 py-4 rounded-xl"
@@ -680,6 +685,7 @@
             </div>
           </div>
         </div>
+        <!-- Share Cards -->
         <div class="w-full flex items-center justify-between gap-5">
           <div
             class="w-full h-full flex items-center justify-start gap-5 border border-[#E5E7EB] bg-[#FFFFFF] px-[22px] py-[18px] rounded-xl"
