Complete Dashboard desktop view

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
   </head>
   <body>
     <!-- Main Boday -->
-    <div class="flex gap-14 w-full h-full mx-auto overflow-scroll">
+    <div class="flex flex-1 gap-14 w-full h-full mx-auto overflow-scroll">
       <!-- Menu -->
       <div
-        class="max-w-[272px] h-[98vh] bg-[#FFFFFF] rounded-tl-[10px] rounded-bl-[10px] border-[#E2E4E9] border-r-[1px]"
+        class="max-w-[272px] h-full bg-[#FFFFFF] rounded-tl-[10px] rounded-bl-[10px] border-[#E2E4E9] border-r-[1px]"
       >
         <div class="flex flex-col items-center justify-between h-full flex-1">
           <div>
@@ -459,7 +459,7 @@
               class="relative w-full overflow-x-auto border border-[#0000000D] sm:rounded-lg"
             >
               <table class="w-full text-left rtl:text-right">
-                <thead class="drop-shadow-sm bg-[#F6F8FA]">
+                <thead class="bg-[#F6F8FA]">
                   <tr>
                     <th
                       scope="col"
@@ -501,7 +501,7 @@
                 </thead>
                 <tbody>
                   <tr
-                    class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600"
+                    class="bg-[#FFFFFF] border-b border-[#EEF0F2] hover:bg-gray-50"
                   >
                     <th
                       scope="row"
@@ -512,26 +512,26 @@
                         src="https://flowbite.com/docs/images/people/profile-picture-2.jpg"
                         alt="Jese image"
                       />
-                      <div class="ps-3">
-                        <div class="text-base font-semibold">Jhon Doe</div>
+                      <div class="ps-5">
+                        <div class="text-base font-medium text-[#0A0D14]">Jhon Doe</div>
                       </div>
                     </th>
-                    <td class="px-6 py-4">Karachi Pakistan</td>
-                    <td class="px-6 py-4">May 12 2025, 7 Days</td>
-                    <td class="px-6 py-4">Normal</td>
+                    <td class="px-6 py-4 font-normal text-base text-[#323232]">Karachi Pakistan</td>
+                    <td class="px-6 py-4 font-normal text-base text-[#323232]">May 12 2025, 7 Days</td>
+                    <td class="px-6 py-4 font-normal text-base text-[#323232]">Normal</td>
                     <td class="px-6 py-4">
                       <span class="text-[#6273D8] px-3 py-1 rounded-2xl bg-[#EFEEFA] font-medium"> Confirm </span>
                     </td>
                     <td class="px-6 py-4">
                       <a
                         href="#"
-                        class="font-medium text-blue-600 dark:text-blue-500 hover:underline"
-                        >...</a
+                        class="font-medium text-[#6E7789]"
+                        > . . . </a
                       >
                     </td>
                   </tr>
                                     <tr
-                    class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600"
+                    class="bg-[#FFFFFF] border-b border-[#EEF0F2] hover:bg-gray-50"
                   >
                     <th
                       scope="row"
@@ -542,26 +542,26 @@
                         src="https://flowbite.com/docs/images/people/profile-picture-2.jpg"
                         alt="Jese image"
                       />
-                      <div class="ps-3">
-                        <div class="text-base font-semibold">Jhon Doe</div>
+                      <div class="ps-5">
+                        <div class="text-base font-medium text-[#0A0D14]">Jhon Doe</div>
                       </div>
                     </th>
-                    <td class="px-6 py-4">Karachi Pakistan</td>
-                    <td class="px-6 py-4">May 12 2025, 7 Days</td>
-                    <td class="px-6 py-4">Normal</td>
+                    <td class="px-6 py-4 font-normal text-base text-[#323232]">Karachi Pakistan</td>
+                    <td class="px-6 py-4 font-normal text-base text-[#323232]">May 12 2025, 7 Days</td>
+                    <td class="px-6 py-4 font-normal text-base text-[#323232]">Normal</td>
                     <td class="px-6 py-4">
                       <span class="text-[#6273D8] px-3 py-1 rounded-2xl bg-[#EFEEFA] font-medium"> Confirm </span>
                     </td>
                     <td class="px-6 py-4">
                       <a
                         href="#"
-                        class="font-medium text-blue-600 dark:text-blue-500 hover:underline"
-                        >...</a
+                        class="font-medium text-[#6E7789]"
+                        > . . . </a
                       >
                     </td>
                   </tr>
                                     <tr
-                    class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600"
+                    class="bg-[#FFFFFF] border-b border-[#EEF0F2] hover:bg-gray-50"
                   >
                     <th
                       scope="row"
@@ -572,26 +572,26 @@
                         src="https://flowbite.com/docs/images/people/profile-picture-2.jpg"
                         alt="Jese image"
                       />
-                      <div class="ps-3">
-                        <div class="text-base font-semibold">Jhon Doe</div>
+                      <div class="ps-5">
+                        <div class="text-base font-medium text-[#0A0D14]">Jhon Doe</div>
                       </div>
                     </th>
-                    <td class="px-6 py-4">Karachi Pakistan</td>
-                    <td class="px-6 py-4">May 12 2025, 7 Days</td>
-                    <td class="px-6 py-4">Normal</td>
+                    <td class="px-6 py-4 font-normal text-base text-[#323232]">Karachi Pakistan</td>
+                    <td class="px-6 py-4 font-normal text-base text-[#323232]">May 12 2025, 7 Days</td>
+                    <td class="px-6 py-4 font-normal text-base text-[#323232]">Normal</td>
                     <td class="px-6 py-4">
                       <span class="text-[#6273D8] px-3 py-1 rounded-2xl bg-[#EFEEFA] font-medium"> Confirm </span>
                     </td>
                     <td class="px-6 py-4">
                       <a
                         href="#"
-                        class="font-medium text-blue-600 dark:text-blue-500 hover:underline"
-                        >...</a
+                        class="font-medium text-[#6E7789]"
+                        > . . . </a
                       >
                     </td>
                   </tr>
                                     <tr
-                    class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600"
+                    class="bg-[#FFFFFF] border-b border-[#EEF0F2] hover:bg-gray-50"
                   >
                     <th
                       scope="row"
@@ -602,26 +602,26 @@
                         src="https://flowbite.com/docs/images/people/profile-picture-2.jpg"
                         alt="Jese image"
                       />
-                      <div class="ps-3">
-                        <div class="text-base font-semibold">Jhon Doe</div>
+                      <div class="ps-5">
+                        <div class="text-base font-medium text-[#0A0D14]">Jhon Doe</div>
                       </div>
                     </th>
-                    <td class="px-6 py-4">Karachi Pakistan</td>
-                    <td class="px-6 py-4">May 12 2025, 7 Days</td>
-                    <td class="px-6 py-4">Normal</td>
+                    <td class="px-6 py-4 font-normal text-base text-[#323232]">Karachi Pakistan</td>
+                    <td class="px-6 py-4 font-normal text-base text-[#323232]">May 12 2025, 7 Days</td>
+                    <td class="px-6 py-4 font-normal text-base text-[#323232]">Normal</td>
                     <td class="px-6 py-4">
                       <span class="text-[#6273D8] px-3 py-1 rounded-2xl bg-[#EFEEFA] font-medium"> Confirm </span>
                     </td>
                     <td class="px-6 py-4">
                       <a
                         href="#"
-                        class="font-medium text-blue-600 dark:text-blue-500 hover:underline"
-                        >...</a
+                        class="font-medium text-[#6E7789]"
+                        > . . . </a
                       >
                     </td>
                   </tr>
                                     <tr
-                    class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600"
+                    class="bg-[#FFFFFF] border-b border-[#EEF0F2] hover:bg-gray-50"
                   >
                     <th
                       scope="row"
@@ -632,51 +632,21 @@
                         src="https://flowbite.com/docs/images/people/profile-picture-2.jpg"
                         alt="Jese image"
                       />
-                      <div class="ps-3">
-                        <div class="text-base font-semibold">Jhon Doe</div>
+                      <div class="ps-5">
+                        <div class="text-base font-medium text-[#0A0D14]">Jhon Doe</div>
                       </div>
                     </th>
-                    <td class="px-6 py-4">Karachi Pakistan</td>
-                    <td class="px-6 py-4">May 12 2025, 7 Days</td>
-                    <td class="px-6 py-4">Normal</td>
+                    <td class="px-6 py-4 font-normal text-base text-[#323232]">Karachi Pakistan</td>
+                    <td class="px-6 py-4 font-normal text-base text-[#323232]">May 12 2025, 7 Days</td>
+                    <td class="px-6 py-4 font-normal text-base text-[#323232]">Normal</td>
                     <td class="px-6 py-4">
-                      <span class="text-[#6273D8] px-3 py-1 rounded-2xl bg-[#EFEEFA] font-medium"> Confirm </span>
+                      <span class="text-[#FFA261] px-3 py-1 rounded-2xl bg-[#FFF5E8] font-medium"> Open </span>
                     </td>
                     <td class="px-6 py-4">
                       <a
                         href="#"
-                        class="font-medium text-blue-600 dark:text-blue-500 hover:underline"
-                        >...</a
-                      >
-                    </td>
-                  </tr>
-                                    <tr
-                    class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600"
-                  >
-                    <th
-                      scope="row"
-                      class="flex items-center px-6 py-4 text-gray-900 whitespace-nowrap dark:text-white"
-                    >
-                      <img
-                        class="w-10 h-10 rounded-full"
-                        src="https://flowbite.com/docs/images/people/profile-picture-2.jpg"
-                        alt="Jese image"
-                      />
-                      <div class="ps-3">
-                        <div class="text-base font-semibold">Jhon Doe</div>
-                      </div>
-                    </th>
-                    <td class="px-6 py-4">Karachi Pakistan</td>
-                    <td class="px-6 py-4">May 12 2025, 7 Days</td>
-                    <td class="px-6 py-4">Normal</td>
-                    <td class="px-6 py-4">
-                      <span class="text-[#6273D8] px-3 py-1 rounded-2xl bg-[#EFEEFA] font-medium"> Confirm </span>
-                    </td>
-                    <td class="px-6 py-4">
-                      <a
-                        href="#"
-                        class="font-medium text-blue-600 dark:text-blue-500 hover:underline"
-                        >...</a
+                        class="font-medium text-[#6E7789]"
+                        > . . . </a
                       >
                     </td>
                   </tr>
@@ -688,7 +658,7 @@
         <!-- Share Cards -->
         <div class="w-full flex items-center justify-between gap-5">
           <div
-            class="w-full h-full flex items-center justify-start gap-5 border border-[#E5E7EB] bg-[#FFFFFF] px-[22px] py-[18px] rounded-xl"
+            class="w-full h-full mb-5 flex items-center justify-start gap-5 border border-[#E5E7EB] bg-[#FFFFFF] px-[22px] py-[18px] rounded-xl"
           >
             <div>
               <img
@@ -723,7 +693,7 @@
             </div>
           </div>
           <div
-            class="w-full h-full flex items-center justify-start gap-5 border border-[#E5E7EB] bg-[#FFFFFF] px-[22px] py-[18px] rounded-xl"
+            class="w-full h-full mb-5 flex items-center justify-start gap-5 border border-[#E5E7EB] bg-[#FFFFFF] px-[22px] py-[18px] rounded-xl"
           >
             <div>
               <img
