--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
   </head>
   <body>
     <!-- Main Boday -->
-    <div class="flex flex-1 gap-14 w-full h-full mx-auto overflow-scroll">
+    <div class="flex flex-1 gap-14 w-full h-full overflow-auto">
       <!-- Menu -->
       <div
-        class="max-w-[272px] h-full bg-[#FFFFFF] rounded-tl-[10px] rounded-bl-[10px] border-[#E2E4E9] border-r-[1px]"
+        class="hidden lg:block max-w-[272px] h-full bg-[#FFFFFF] rounded-tl-[10px] rounded-bl-[10px] border-[#E2E4E9] border-r-[1px]"
       >
         <div class="flex flex-col items-center justify-between h-full flex-1">
           <div>
@@ -197,7 +197,7 @@
       <div class="flex flex-col w-full rounded-lg my-7 mx-5">
         <!-- Header -->
         <div
-          class="bg-[#FFFFFF] rounded-lg px-5 py-3 w-full border border-[#E2E4E9] min-h-16 flex items-center justify-between"
+          class="hidden lg:flex bg-[#FFFFFF] rounded-lg px-5 py-3 w-full border border-[#E2E4E9] min-h-16 items-center justify-between"
         >
           <div>
             <div
@@ -256,12 +256,12 @@
           </div>
         </div>
         <!-- Page Title -->
-        <div class="py-6">
+        <div class="hidden lg:block py-6">
           <h1 class="font-semibold text-2xl">Welcome To Dashboard</h1>
         </div>
-        <div class="flex items-center justify-between gap-3 mb-5">
+        <div class="flex flex-col lg:flex-row items-center justify-between gap-3 mb-5">
           <!-- Stats -->
-          <div class="flex flex-col items-center justify-between min-h-[380px]">
+          <div class="flex flex-col gap-3 items-center justify-between h-full">
             <div class="flex flex-col items-center justify-center gap-3">
               <div
                 class="border border-[#E5E7EB] bg-[#FFFFFF] py-4 px-5 rounded-xl flex items-center justify-center"
@@ -364,14 +364,14 @@
           </div>
           <!-- Comission Tracking -->
           <div
-            class="border border-[#E5E7EB] bg-[#FFFFFF] py-4 px-5 rounded-xl w-full min-h-[380px] flex flex-col items-start justify-start"
+            class="border border-[#E5E7EB] bg-[#FFFFFF] py-4 px-5 rounded-xl w-full h-full flex flex-col items-start justify-start"
           >
             <div class="border-b-2 border-b-[#F2F2F2] w-full pb-3">
               <h1 class="font-semibold text-[#0A0D14] text-xl">
                 Commision Tracking
               </h1>
             </div>
-            <div class="flex items-center justify-between w-full py-3 mb-5">
+            <div class="flex flex-col lg:flex-row items-center justify-between w-full py-3 mb-5">
               <div class="flex gap-5">
                 <div class="flex gap-1">
                   <p class="font-semibold text-xl text-[#0A0D14] mr-2">0%</p>
@@ -382,7 +382,7 @@
                   <p class="font-medium text text-[#868C98]">Projects</p>
                 </div>
               </div>
-              <div>
+              <div class="hidden lg:block">
                 <button
                   class="bg-[#6259CA] px-4 py-2 text-[#FFFFFF] rounded-lg cursor-pointer font-semibold text-base"
                 >
@@ -390,22 +390,22 @@
                 </button>
               </div>
             </div>
-            <div class="flex items-center justify-between w-full py-3 mb-5">
-              <div class="flex items-center justify-evenly gap-10">
+            <div class="flex flex-col lg:flex-row items-center justify-between w-full py-3 mb-5">
+              <div class="flex flex-col lg:flex-row items-center justify-evenly gap-10">
                 <div>
                   <div class="w-40 h-40 rounded-full bg-[#59B6FC]"></div>
                 </div>
-                <div class="flex flex-col items-center justify-center gap-2">
-                  <div class="flex items-center gap-3 w-full mb-3">
+                <div class="flex items-center justify-center gap-2">
+                  <div class="flex items-center gap-3 w-full lg:mb-3">
                     <div class="w-3 h-3 rounded-full bg-[#59B6FC]"></div>
-                    <div class="flex justify-between w-[200px]">
+                    <div class="flex items-center justify-between gap-10 lg:w-[200px]">
                       <p class="font-normal text-sm text-[#101010B2]">Paid</p>
                       <p class="font-semibold text-lg text-[#101010]">70%</p>
                     </div>
                   </div>
                   <div class="flex items-center gap-3 w-full">
                     <div class="w-3 h-3 rounded-full bg-[#FECB67]"></div>
-                    <div class="flex justify-between w-[200px]">
+                    <div class="flex items-center justify-between gap-10 lg:w-[200px]">
                       <p class="font-normal text-sm text-[#101010B2]">
                         Pending
                       </p>
@@ -414,7 +414,7 @@
                   </div>
                 </div>
               </div>
-              <div class="flex flex-col py-5 px-10 gap-1">
+              <div class="flex flex-col text-left w-full items-start lg:items-center py-5 px-10 gap-1">
                 <p class="font-medium text-[22px] text-[#868C98]">
                   Total Earned
                 </p>
@@ -423,6 +423,13 @@
                 </p>
               </div>
             </div>
+                          <div class="block w-full lg:hidden">
+                <button
+                  class="bg-[#6259CA] w-full px-4 py-2 text-[#FFFFFF] rounded-lg cursor-pointer font-semibold text-base"
+                >
+                  View Details
+                </button>
+              </div>
           </div>
         </div>
         <!-- Recent Bookings -->
@@ -431,14 +438,14 @@
             class="w-full h-full flex flex-col items-start justify-start gap-5 border border-[#E5E7EB] bg-[#FFFFFF] px-5 py-4 rounded-xl"
           >
             <div
-              class="border-b-2 border-b-[#F2F2F2] w-full pb-5 pt-1 flex items-center justify-between"
+              class="border-b-2 border-b-[#F2F2F2] w-full pb-5 pt-1 flex flex-col items-start lg:flex-row lg:items-center justify-between"
             >
-              <h1 class="font-semibold text-[#0A0D14] text-xl">
+              <h1 class="font-semibold text-[#0A0D14] text-xl mb-3 lg:mb-0">
                 Recent Booking
               </h1>
               <div>
                 <div
-                  class="border border-[#E2E4E9] bg-[#F6F8FA] py-2 px-[14px] flex items-center justify-start rounded-lg min-w-[350px]"
+                  class="border border-[#E2E4E9] bg-[#F6F8FA] py-2 px-[14px] flex items-center justify-start rounded-lg "
                 >
                   <img
                     src="https://cdn-icons-png.flaticon.com/512/5680/5680244.png"
@@ -656,7 +663,7 @@
           </div>
         </div>
         <!-- Share Cards -->
-        <div class="w-full flex items-center justify-between gap-5">
+        <div class="w-full flex flex-col lg:flex-row items-center justify-between gap-5">
           <div
             class="w-full h-full mb-5 flex items-center justify-start gap-5 border border-[#E5E7EB] bg-[#FFFFFF] px-[22px] py-[18px] rounded-xl"
           >
