Fix UI for all pages

--- a/settings.html
+++ b/settings.html
@@ -17,7 +17,7 @@
          font-family: "Inter", sans-serif;
          }
       </style>
-      <title>Top Tier Travel</title>
+      <title>Settings</title>
    </head>
    <body>
       <!-- Main Boday -->
