Complete All Booking view

--- a/allbookings.html
+++ b/allbookings.html
@@ -366,7 +366,7 @@
          <!-- Main Content -->
          <!-- For Debug -->
          <!-- bg-white w-full h-[90vh] rounded-lg -->
-         <div class="flex flex-col w-full rounded-lg my-7 mx-5">
+         <div class="flex flex-col w-full h-full rounded-lg my-7 mx-5">
             <!-- Header -->
             <div
                class="hidden lg:flex bg-[#FFFFFF] rounded-lg px-5 py-3 w-full border border-[#E2E4E9] min-h-16 items-center justify-between"
@@ -462,7 +462,7 @@
                      </div>
                   </div>
                   <div
-                     class="relative w-full overflow-x-auto border border-[#0000000D] sm:rounded-lg"
+                     class="relative w-full overflow-auto border border-[#0000000D] sm:rounded-lg"
                      >
                      <table class="w-full text-left rtl:text-right">
                         <thead class="bg-[#F6F8FA]">
@@ -477,7 +477,7 @@
                                  scope="col"
                                  class="px-6 py-3 text-base font-medium text-[#0A0D14]"
                                  >
-                                 Name
+                                 Customer
                               </th>
                               <th
                                  scope="col"
@@ -489,15 +489,21 @@
                                  scope="col"
                                  class="px-6 py-3 text-base font-medium text-[#0A0D14]"
                                  >
-                                 Date & Duration
+                                 Check In - Out
                               </th>
                               <th
                                  scope="col"
                                  class="px-6 py-3 text-base font-medium text-[#0A0D14]"
                                  >
-                                 Status
+                                 Subtotal
                               </th>
                               <th
+                                 scope="col"
+                                 class="px-6 py-3 text-base font-medium text-[#0A0D14]"
+                                 >
+                                 Comission
+                              </th>
+                               <th
                                  scope="col"
                                  class="px-6 py-3 text-base font-medium text-[#0A0D14]"
                                  >
@@ -515,6 +521,7 @@
                            <tr
                               class="bg-[#FFFFFF] border-b border-[#EEF0F2] hover:bg-gray-50"
                               >
+                              <td class="px-6 py-4 font-normal text-base text-[#323232]">May 12 2025</td>
                               <th
                                  scope="row"
                                  class="flex items-center px-6 py-4 text-gray-900 whitespace-nowrap dark:text-white"
@@ -529,8 +536,9 @@
                                  </div>
                               </th>
                               <td class="px-6 py-4 font-normal text-base text-[#323232]">Karachi Pakistan</td>
-                              <td class="px-6 py-4 font-normal text-base text-[#323232]">May 12 2025, 7 Days</td>
-                              <td class="px-6 py-4 font-normal text-base text-[#323232]">Normal</td>
+                              <td class="px-6 py-4 font-normal text-base text-[#323232]">May 12 - May 18</td>
+                              <td class="px-6 py-4 font-normal text-base text-[#323232]">$100.00</td>
+                              <td class="px-6 py-4 font-normal text-base text-[#323232]">$10.00</td>
                               <td class="px-6 py-4">
                                  <span class="text-[#6273D8] px-3 py-1 rounded-2xl bg-[#EFEEFA] font-medium"> Confirm </span>
                               </td>
@@ -545,6 +553,7 @@
                            <tr
                               class="bg-[#FFFFFF] border-b border-[#EEF0F2] hover:bg-gray-50"
                               >
+                              <td class="px-6 py-4 font-normal text-base text-[#323232]">May 12 2025</td>
                               <th
                                  scope="row"
                                  class="flex items-center px-6 py-4 text-gray-900 whitespace-nowrap dark:text-white"
@@ -559,8 +568,9 @@
                                  </div>
                               </th>
                               <td class="px-6 py-4 font-normal text-base text-[#323232]">Karachi Pakistan</td>
-                              <td class="px-6 py-4 font-normal text-base text-[#323232]">May 12 2025, 7 Days</td>
-                              <td class="px-6 py-4 font-normal text-base text-[#323232]">Normal</td>
+                              <td class="px-6 py-4 font-normal text-base text-[#323232]">May 12 - May 18</td>
+                              <td class="px-6 py-4 font-normal text-base text-[#323232]">$100.00</td>
+                              <td class="px-6 py-4 font-normal text-base text-[#323232]">$10.00</td>
                               <td class="px-6 py-4">
                                  <span class="text-[#6273D8] px-3 py-1 rounded-2xl bg-[#EFEEFA] font-medium"> Confirm </span>
                               </td>
@@ -572,9 +582,10 @@
                                     >
                               </td>
                            </tr>
-                           <tr
+                            <tr
                               class="bg-[#FFFFFF] border-b border-[#EEF0F2] hover:bg-gray-50"
                               >
+                              <td class="px-6 py-4 font-normal text-base text-[#323232]">May 12 2025</td>
                               <th
                                  scope="row"
                                  class="flex items-center px-6 py-4 text-gray-900 whitespace-nowrap dark:text-white"
@@ -589,8 +600,9 @@
                                  </div>
                               </th>
                               <td class="px-6 py-4 font-normal text-base text-[#323232]">Karachi Pakistan</td>
-                              <td class="px-6 py-4 font-normal text-base text-[#323232]">May 12 2025, 7 Days</td>
-                              <td class="px-6 py-4 font-normal text-base text-[#323232]">Normal</td>
+                              <td class="px-6 py-4 font-normal text-base text-[#323232]">May 12 - May 18</td>
+                              <td class="px-6 py-4 font-normal text-base text-[#323232]">$100.00</td>
+                              <td class="px-6 py-4 font-normal text-base text-[#323232]">$10.00</td>
                               <td class="px-6 py-4">
                                  <span class="text-[#6273D8] px-3 py-1 rounded-2xl bg-[#EFEEFA] font-medium"> Confirm </span>
                               </td>
@@ -602,9 +614,10 @@
                                     >
                               </td>
                            </tr>
-                           <tr
+                            <tr
                               class="bg-[#FFFFFF] border-b border-[#EEF0F2] hover:bg-gray-50"
                               >
+                              <td class="px-6 py-4 font-normal text-base text-[#323232]">May 12 2025</td>
                               <th
                                  scope="row"
                                  class="flex items-center px-6 py-4 text-gray-900 whitespace-nowrap dark:text-white"
@@ -619,8 +632,9 @@
                                  </div>
                               </th>
                               <td class="px-6 py-4 font-normal text-base text-[#323232]">Karachi Pakistan</td>
-                              <td class="px-6 py-4 font-normal text-base text-[#323232]">May 12 2025, 7 Days</td>
-                              <td class="px-6 py-4 font-normal text-base text-[#323232]">Normal</td>
+                              <td class="px-6 py-4 font-normal text-base text-[#323232]">May 12 - May 18</td>
+                              <td class="px-6 py-4 font-normal text-base text-[#323232]">$100.00</td>
+                              <td class="px-6 py-4 font-normal text-base text-[#323232]">$10.00</td>
                               <td class="px-6 py-4">
                                  <span class="text-[#6273D8] px-3 py-1 rounded-2xl bg-[#EFEEFA] font-medium"> Confirm </span>
                               </td>
@@ -632,9 +646,10 @@
                                     >
                               </td>
                            </tr>
-                           <tr
+                            <tr
                               class="bg-[#FFFFFF] border-b border-[#EEF0F2] hover:bg-gray-50"
                               >
+                              <td class="px-6 py-4 font-normal text-base text-[#323232]">May 12 2025</td>
                               <th
                                  scope="row"
                                  class="flex items-center px-6 py-4 text-gray-900 whitespace-nowrap dark:text-white"
@@ -649,10 +664,11 @@
                                  </div>
                               </th>
                               <td class="px-6 py-4 font-normal text-base text-[#323232]">Karachi Pakistan</td>
-                              <td class="px-6 py-4 font-normal text-base text-[#323232]">May 12 2025, 7 Days</td>
-                              <td class="px-6 py-4 font-normal text-base text-[#323232]">Normal</td>
+                              <td class="px-6 py-4 font-normal text-base text-[#323232]">May 12 - May 18</td>
+                              <td class="px-6 py-4 font-normal text-base text-[#323232]">$100.00</td>
+                              <td class="px-6 py-4 font-normal text-base text-[#323232]">$10.00</td>
                               <td class="px-6 py-4">
-                                 <span class="text-[#FFA261] px-3 py-1 rounded-2xl bg-[#FFF5E8] font-medium"> Open </span>
+                                 <span class="text-[#6273D8] px-3 py-1 rounded-2xl bg-[#EFEEFA] font-medium"> Confirm </span>
                               </td>
                               <td class="px-6 py-4">
                                  <a
@@ -663,6 +679,19 @@
                               </td>
                            </tr>
                         </tbody>
+                      <tfoot>
+                        <tr>
+                          <td colspan="8" class="px-6 py-4">
+                            <div class="flex justify-end items-center gap-2">
+                              <button class="px-3 py-1 rounded-md text-[#61646E] font-normal text-base hover:bg-gray-100 cursor-pointer">Prev</button>
+                              <button class="px-4 py-2 rounded-lg text-[#FFFFFF] font-normal text-base bg-[#6259CA]">1</button>
+                              <button class="px-3 py-1 rounded-md text-[#101010] font-normal text-base hover:bg-gray-100 cursor-pointer">2</button>
+                              <span class="px-1">...</span>
+                              <button class="px-3 py-1 rounded-md text-[#101010] font-normal text-base hover:bg-gray-100 cursor-pointer">Next</button>
+                            </div>
+                          </td>
+                        </tr>
+                      </tfoot>
                      </table>
                   </div>
                </div>
